// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Entry /> It renders Not Found for missing entry 1`] = `<NotFound />`;

exports[`<Entry /> It renders entry with history 1`] = `
<Fragment>
  <Navigation
    entry={
      Object {
        "name": "PHP",
      }
    }
    home={null}
    quadrant={
      Object {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          PHP
        </h1>
        <img
          alt="PHP"
          className="entry-logo"
          src="https://www.php.net/images/logos/php-logo.svg"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 2004"
        />
        <LicenseBadges
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Description"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <h2>
          Rationale
        </h2>
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Rationale"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <License
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={Array []}
        />
        <History
          history={
            Array [
              Object {
                "date": "Jan 1, 2004",
                "ringName": "Adopt",
              },
              Object {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          Array [
            "90's",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders entry with related links 1`] = `
<Fragment>
  <Navigation
    entry={
      Object {
        "name": "Java",
      }
    }
    home={null}
    quadrant={
      Object {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          Java
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Adopt"
          icon="map-marker"
          link={null}
          text="Adopt"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Mar 20, 2018"
        />
        <LicenseBadges
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Description"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <h2>
          Rationale
        </h2>
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Rationale"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <License
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={
            Array [
              Object {
                "file": "php.html",
                "name": "PHP",
              },
            ]
          }
        />
        <History
          history={Array []}
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          Array [
            "90's",
            "java",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders inactive badge 1`] = `
<Fragment>
  <Navigation
    entry={
      Object {
        "name": "Lisp",
      }
    }
    home={null}
    quadrant={
      Object {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          Lisp
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 1970"
        />
        <Badge
          className="inactive"
          icon="warning"
          link={null}
          text="Inactive"
        />
        <LicenseBadges
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Description"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <h2>
          Rationale
        </h2>
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Rationale"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <License
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={Array []}
        />
        <History
          history={
            Array [
              Object {
                "date": "Jan 1, 1970",
                "ringName": "Adopt",
              },
              Object {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={Array []}
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders logotype if present 1`] = `
<Fragment>
  <Navigation
    entry={
      Object {
        "name": "PHP",
      }
    }
    home={null}
    quadrant={
      Object {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          PHP
        </h1>
        <img
          alt="PHP"
          className="entry-logo"
          src="https://www.php.net/images/logos/php-logo.svg"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 2004"
        />
        <LicenseBadges
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Description"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <h2>
          Rationale
        </h2>
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="Rationale"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
        <License
          license={
            Object {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={Array []}
        />
        <History
          history={
            Array [
              Object {
                "date": "Jan 1, 2004",
                "ringName": "Adopt",
              },
              Object {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          Array [
            "90's",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;
